# news-chatbot

./: .env.sample  .gitignore  docker-compose.yml  pyproject.toml  services.py  test_agent.ipynb  test_chain.ipynb  test_chain_manual.ipynb
dbt_news/: dbt_project.yml
dbt_news/models/staging/: news.sql
infra/airbyte/: variables.tf
news_airbyte/: main.tf
news_dbt/: .gitignore
news_infra/airbyte/: main.tf
news_model/: Dockerfile  pyproject.toml  requirements.txt
news_model/app/: config.py  model.py  server.py
news_model/notebooks/: test_agent.ipynb  test_chain.ipynb  test_chain_manual.ipynb
news_orchestration/: Dockerfile  pyproject.toml  requirements.txt
news_orchestration/flows/: transform_news.py
news_orchestration/news_dbt/: dbt_project.yml  profiles.yml
news_orchestration/news_dbt/models/staging/: news.sql
orchestration/: transform_news.py
