[tool.poetry]
name = "news-model"
version = "0.1.0"
description = ""
authors = ["Franco Lianza <lianza.fl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "<2"
langchain = "^0.1.12"
chromadb = "^0.4.24"
langserve = {extras = ["server"], version = "^0.0.51"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
