[tool.poetry]
name = "news-orchestration"
version = "0.1.0"
description = ""
authors = ["Franco Lianza <lianza.fl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.12"
langchain-community = "^0.0.28"
chromadb = "^0.4.24"
prefect = "^2.16.3"
sqlalchemy = "^2.0.28"
prefect-dbt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
